--- a/app/assets/stylesheets/partials/modules/widgets/_map-micello.scss
+++ b/app/assets/stylesheets/partials/modules/widgets/_map-micello.scss
@@ -122,6 +122,7 @@
       font-family: $font-family !important;
       line-height: 1.5 !important;
       background-image: none !important;
+      overflow: visible !important;
 
       /*
         Overlay
@@ -254,11 +255,10 @@
 
         /* Common box shadow */
         #ui-zoom,
-        #ui-levels-floors-wrapper {box-shadow: $box-shadow-heavy !important;}
+        #ui-levels-floors-container {box-shadow: $box-shadow-heavy !important;}
 
         /* Common width */
         #ui-zoom,
-        #ui-levels-floors-wrapper,
         #ui-levels-floors-container {width: 40px !important;}
 
         /* Remove border */
@@ -268,8 +268,7 @@
           /* Common width */
           #ui-zoom-in,
           #ui-zoom-out,
-          #ui-levels-floors,
-          .ui_levels_floor {width: 100% !important;}
+          .ui-levels-floors {width: 100% !important;}
 
           /* Common border colour */
           #ui-zoom-in,
@@ -417,6 +416,42 @@
         #ui-levels:before {
           content: "LEVEL";
           left: 15px;
+        }
+      }
+
+      /* Category filtered store counts per level */
+
+      #ui-levels {
+        #ui-levels-floors-container {
+          left: 15px;
+
+        }
+        #ui-levels-floors-wrapper {
+          width: 60px !important;
+          background-color: transparent !important;
+          box-shadow: none;
+          -moz-box-shadow: none;
+          -webkitbox-shadow: none;
+          
+
+          #ui_levels_floors {
+            width: 40px !important;
+          }
+
+          .ui_levels_floor {
+            width: 40px !important;
+          
+            &:before {
+              position: absolute;
+              left: 70%;
+              background-color: #da291c;
+              color: white;
+              border-radius: 50px;
+              text-align: centre;
+              padding: 2px 5px;
+              font-size: smaller;
+            }
+          }
         }
       }
 
