--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -130,71 +130,16 @@
         </div>
         <%# //Store details %>
 
-        <%# 'Product' and 'Deal' tiles %>
-        <%- if !@products.empty? %>
+        <%# Product and Deal tiles %>
+        <%- if @products.present? or @deals.present? %>
           <footer class="storefront__featured">
 
-              <%# 'Product' tiles %>
-              <div class="storefront__featured__item storefront__featured__item--products island-ends">
-                <div class="container">
-                  <h2 class="storefront__featured__hdr">Featured from <%= @store.name %></h2>
-                  <ul class="grid grid--gutter-half grid--mrg-half">
-                    <% @products.each do |product| %>
-                      <li class="grid__item one-half non-palm-one-third">
-                        <%= render partial: '/shared/tiles/product',
-                            layout: '/layouts/tile',
-                            locals: {
-                              result: product,
-                              options: {
-                                height: 288
-                              }
-                            }
-                          %>
-                      </li>
-                    <% end %>
-                  </ul>
-                  <%= link_to centre_products_path(retailer: [params[:retailer_code]]), class: 'storefront__featured__view-more' do %>
-                    View more<span class="icon icon--arrow-right icon--lrg" aria-hidden="true"></span>
-                  <% end %>
-                </div>
-              </div>
-              <%# //Product tiles %>
-
-              <%# Deal tiles %>
-              <%- if false %>
-              <div class="storefront__featured__item storefront__featured__item--deals island-ends">
-                <div class="container">
-                  <h2 class="storefront__featured__hdr">Deals from <%= @store.name %></h2>
-                  <ul class="grid grid--gutter-half grid--mrg-half">
-                    <%# FIXME: [BACKEND] hacked this together so needs to be done properly and we only show 3 tiles or less %>
-                    <% 3.times do |n| %>
-                      <li class="grid__item one-half non-palm-one-third">
-                        <%= render partial: '/shared/tiles/deal',
-                            layout: '/layouts/tile',
-                            locals: {result: Hashie::Mash.new(
-                              title: 'deal super #{n}',
-                              retailer_logo_url: 'http://image-service.systest.dbg.westfield.com/transform?ref=fcc997784861edcc4a1bd8abd93cb5930c75dacca267636afa4a5ff47d4c3693.gif',
-                              store_name: '',
-                              kind: 'deal',
-                              meta: Hashie::Mash.new(
-                                title: '',
-                                image: ''
-                              )
-                            )
-                        } %>
-                      </li>
-                    <% end %>
-                  </ul>
-                  <%# FIXME: [BACKEND] make URL dynamic %>
-                  <a href="#" class="storefront__featured__view-more">View more<span class="icon icon--arrow-right icon--lrg" aria-hidden="true"></span></a>
-                </div>
-              </div>
-              <%# //Deal tiles %>
-              <%- end %>
+            <%= render 'tiles', results: @products, kind: 'product', heading: 'Featured', path: centre_products_path( centre_id: @centre.code, retailer: [ params[ :retailer_code ] ] ), store: @store if @products.present? %>
+            <%= render 'tiles', results: @deals, kind: 'deal', heading: 'Deals', path: centre_deals_path( @centre.code ), store: @store if @deals.present? %>
 
           </footer>
         <% end %>
-        <%# Product and Deal tiles %>
+        <%# //Product and Deal tiles %>
 
       </article>
 
