makes store list page load on maps when expected

--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -46,7 +46,7 @@
                             <span class="icon icon--arrow-right-big icon--lrg btn--pointer__icon js-disabled-hide" aria-hidden="true"></span>
                           </div>
                         <% else %>
-                          <a href="<%= centre_stores_category_path(@centre, category.code) %>{{gift_cards ? '?gift_cards=true':''}}" class="drop-down-menu__hdr-btn btn btn--full btn--full-left btn--pointer is-childless" ng-click="saveCategory('<%= category.code %>')"><%= category.name %></a>
+                          <a href="<%= centre_stores_category_path(@centre, category.code) %>{{queryParams}}" class="drop-down-menu__hdr-btn btn btn--full btn--full-left btn--pointer is-childless" ng-click="saveCategory('<%= category.code %>')"><%= category.name %></a>
                         <% end %>
                       <% else %>
                         <% if filtering_gift_cards? && category.stores_accepting_gift_cards < 1 %>
@@ -90,7 +90,7 @@
                               <span class="hide-visually"> (gift cards not available for this category)</span>
                             </div>
                           <% else %>
-                            <a href="<%= centre_stores_category_path(@centre, sub_category.code) %>{{gift_cards ? '?gift_cards=true':''}}" class="btn btn--full btn--full-left" ng-click="saveCategory('<%= sub_category.code %>')"><%= sub_category.name %></a>
+                            <a href="<%= centre_stores_category_path(@centre, sub_category.code) %>{{queryParams}}" class="btn btn--full btn--full-left" ng-click="saveCategory('<%= sub_category.code %>')"><%= sub_category.name %></a>
                           <% end %>
                         </li>
                       <% end %>
@@ -107,9 +107,10 @@
 
           <%# Applied category %>
           <% if @active_category %>
-            <form action="<%= centre_stores_path(@centre) %>" method="get" class="stores-maps__filters__item">
+            <form action="<%= centre_stores_path(@centre) %>" method="get" class="stores-maps__filters__item js-map-view-state">
                 <legend class="hide-visually">Clear the filtered category from the stores list</legend>
                 <input type="hidden" name="gift_cards" value="{{gift_cards}}">
+                <input type="hidden" name="map" value="{{viewingMap}}">
                 <button type="submit" class="tags__btn tags__btn--solo btn">
                   <span class="txt-truncate"><%= @active_category.name %></span>
                   <span class="icon icon--close-sml icon--lrg icon--flush-top" aria-hidden="true"></span>
@@ -119,7 +120,8 @@
           <%# //Applied category %>
 
           <%# Gift card filter %>
-          <form id="giftCardForm" action="<%= request.path %>" method="get" class="stores-maps__filters__item">
+          <form id="giftCardForm" action="<%= request.path %>" method="get" class="stores-maps__filters__item js-map-view-state">
+              <input type="hidden" name="map" value="{{viewingMap}}">
               <legend class="hide-visually">Gift card filter</legend>
               <label for="gift-card-store-filter" class="btn btn--main btn--main-dark btn--main-checkbox-toggle btn--main-checkbox-toggle-icon <%= 'is-disabled' if !@stores.any_accepting_gift_cards? %> <%= 'is-active' if filtering_gift_cards? %>">
                 <input ng-init="gift_cards = <%= filtering_gift_cards? ? true : false %>" ng-model="gift_cards" ng-change="giftCardSubmit()" id="gift-card-store-filter" type="checkbox" name="gift_cards" value="true" class="btn--main-checkbox-toggle__input" <%= 'checked' if filtering_gift_cards? %><%= 'disabled' unless @stores.any_accepting_gift_cards? %>>
@@ -192,9 +194,8 @@
     function storeMapPageReady() {
       $('.js-defer-image-load-container').deferImages({matchMedia: 'all and (min-width: 40.0625em)'});
       storeMapPage.store();
-      <% if @active_category %>
-      storeMapPage.pinStores();
-      <% end %>
+      <%= 'storeMapPage.pinStores();' if @active_category %>
+      <%= 'storeMapPage.show();' if @show_map_on_palm %>
     }
   </script>
 <%- end -%>
