fixes map not redrawing on page load issue

--- a/app/assets/javascripts/map/deferred_map.js.coffee.erb
+++ b/app/assets/javascripts/map/deferred_map.js.coffee.erb
@@ -42,6 +42,7 @@ proxiedFunctions = [
   'lock'
   'pinStore'
   'pinStores'
+  'forceRedraw'
 ]
 
 do (proto = map.Micello.prototype, toProxy = proxiedFunctions) ->
