--- a/app/assets/stylesheets/styleguide/partials/base/_main.scss
+++ b/app/assets/stylesheets/styleguide/partials/base/_main.scss
@@ -2,4 +2,4 @@
    @BASE -> MAIN
    ====================================================================================== */
 
-body {background: $color-grey-light-3;}
+body {background: #f8f8f8;}
