--- a/app/assets/stylesheets/styleguide/partials/modules/_code-block.scss
+++ b/app/assets/stylesheets/styleguide/partials/modules/_code-block.scss
@@ -9,8 +9,10 @@
 .sg-code-block {
   @include to-rem(padding, 1 6);
   background-color: #f8f8f8;
-  border: 1px solid #ccc;
-  border-radius: 4px;
+  border-top: 1px solid $color-grey-light-1;
+
+  /* Override style from prism.css */
+  &[class*="language-"] {margin-bottom: 0;}
 
   /* Override style from prism.css. This is to stop the main content area from getting too wide */
   code[class*="language-"],
