--- a/app/assets/stylesheets/styleguide/styleguide.scss
+++ b/app/assets/stylesheets/styleguide/styleguide.scss
@@ -58,6 +58,7 @@ Style Guide stylesheet
 @import "partials/modules/example";
 @import "partials/modules/modifier";
 @import "partials/modules/code-block";
+@import "partials/modules/intro";
 
 /* Overrides */
 @import "partials/utils/overrides";
