--- a/app/views/layouts/styleguide.html.erb
+++ b/app/views/layouts/styleguide.html.erb
@@ -52,7 +52,7 @@
 <%# //Header %>
 
 <%# Content %>
-<div class="sg-content container">
+<div class="sg-content">
 
     <%# Aside %>
     <!-- <aside class="sg-aside" role="complemtary">
