--- a/app/views/styleguide/base.html.erb
+++ b/app/views/styleguide/base.html.erb
@@ -1,7 +1,4 @@
-<div class="sg-section">
-  <div class="sg-h1">Base</div>
-  <div class="box island">This covers the default colours, typography, link, list and table styles</div>
-</div>
+<%= styleguide_intro "Base", "This covers the default colours, typography, link, list and table styles." do %><% end %>
 
 <%= render 'styleguide/base/typography' %>
 
