--- a/app/views/styleguide/buttons.html.erb
+++ b/app/views/styleguide/buttons.html.erb
@@ -1,7 +1,4 @@
-<div class="sg-section">
-  <div class="sg-h1">Buttons</div>
-  <div class="box island">All of the different button styles</div>
-</div>
+<%= styleguide_intro "Buttons", "All of the different button styles." do %><% end %>
 
 <%= render 'styleguide/buttons/base' %>
 
