--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -95,7 +95,7 @@
             </button>
             <%# //Wide view trigger %>
 
-            <div id="filters-category" ng-show="activeFilter === 'category'" class="filters__target pointer-up">
+            <div id="filters-category" wf-filter-submit ng-show="activeFilter === 'category'" class="filters__target pointer-up">
               <div ng-show="search.categories.field === 'super_cat'"><div ng-include src="'CategoryItemTemplate'"></div></div>
               <div ng-show="search.categories.field === 'category'"><div ng-include src="'CategoryItemTemplate'"></div></div>
               <div ng-show="search.categories.field === 'sub_category'"><div ng-include src="'SubCategoryTemplate'"></div></div>
@@ -121,7 +121,7 @@
             </button>
             <%# //Wide view trigger %>
 
-            <div id="filters-retailer" ng-show="activeFilter === 'retailer'" class="filters__target pointer-up">
+            <div id="filters-retailer" wf-filter-submit ng-show="activeFilter === 'retailer'" class="filters__target pointer-up">
 
               <div class="drop-down-menu__hdr drop-down-menu__divider islet">
                 <h3>{{ search.retailers.title }}</h3>
@@ -164,7 +164,7 @@
             </button>
             <%# //Wide view trigger %>
 
-            <div id="filters-brand" ng-show="activeFilter === 'brand'" class="filters__target pointer-up">
+            <div id="filters-brand" wf-filter-submit ng-show="activeFilter === 'brand'" class="filters__target pointer-up">
 
               <div class="drop-down-menu__hdr drop-down-menu__divider islet">
                 <h3>{{ search.brands.title }}</h3>
@@ -207,7 +207,7 @@
             </button>
             <%# //Wide view trigger %>
 
-            <div id="filters-colour" ng-show="activeFilter === 'colour'" class="filters__target pointer-up">
+            <div id="filters-colour" wf-filter-submit ng-show="activeFilter === 'colour'" class="filters__target pointer-up">
 
               <div class="drop-down-menu__hdr drop-down-menu__divider islet">
                 <h3>{{ search.colours.title }}</h3>
@@ -245,7 +245,7 @@
             </button>
             <%# //Wide view trigger %>
 
-            <div id="filters-size" ng-show="activeFilter === 'size'" class="filters__target pointer-up">
+            <div id="filters-size" wf-filter-submit ng-show="activeFilter === 'size'" class="filters__target pointer-up">
 
               <div class="drop-down-menu__hdr drop-down-menu__divider islet">
                 <h3>{{ search.sizes.title }}</h3>
@@ -283,7 +283,7 @@
             </button>
             <%# //Wide view trigger %>
 
-            <div id="filters-price" ng-show="activeFilter === 'price'" class="filters__target pointer-up">
+            <div id="filters-price" wf-filter-submit ng-show="activeFilter === 'price'" class="filters__target pointer-up">
 
               <div class="drop-down-menu__hdr drop-down-menu__divider islet">
                 <h3>{{ search.price.title }}</h3>
