removes pins from selected but not current stores

--- a/app/assets/stylesheets/partials/modules/widgets/_map-micello.scss
+++ b/app/assets/stylesheets/partials/modules/widgets/_map-micello.scss
@@ -142,8 +142,11 @@
       */
 
       .infoOut {
-        /* Allows space for the pin to be seen under the popup */
-        margin-bottom: 20px !important;
+
+        &.is-pinned-store {
+          /* Allows space for the pin to be seen under the popup */
+          margin-bottom: 20px !important;
+        }
 
         /* Wrapper */
         .infoWrapper,
