get user position and sort centre list based on users distance from centres

--- a/app/views/centres/index.html.erb
+++ b/app/views/centres/index.html.erb
@@ -67,32 +67,32 @@
         <%# Tab nav %>
         <ul class="tab__nav horiz-list">
           <li>
-            <a class="js-viewport-check-on-click is-active" href="#tab-nsw">
+            <a class="js-viewport-check-on-click js-nsw is-active" href="#tab-nsw">
               <abbr title="New South Wales">NSW</abbr>
             </a>
           </li>
           <li>
-            <a class="js-viewport-check-on-click" href="#tab-act">
+            <a class="js-viewport-check-on-click js-act" href="#tab-act">
               <abbr title="Australian Capital Territory">ACT</abbr>
             </a>
           </li>
           <li>
-            <a class="js-viewport-check-on-click" href="#tab-qld">
+            <a class="js-viewport-check-on-click js-qld" href="#tab-qld">
               <abbr title="Queensland">QLD</abbr>
             </a>
           </li>
           <li>
-            <a class="js-viewport-check-on-click" href="#tab-vic">
+            <a class="js-viewport-check-on-click js-vic" href="#tab-vic">
               <abbr title="Victoria">VIC</abbr>
             </a>
           </li>
           <li>
-            <a class="js-viewport-check-on-click" href="#tab-sa">
+            <a class="js-viewport-check-on-click js-sa" href="#tab-sa">
               <abbr title="South Australia">SA</abbr>
             </a>
           </li>
           <li>
-            <a class="js-viewport-check-on-click" href="#tab-wa">
+            <a class="js-viewport-check-on-click js-wa" href="#tab-wa">
               <abbr title="Western Australia">WA</abbr>
             </a>
           </li>
