Minor update to buttons and example styles

--- a/app/assets/stylesheets/styleguide/partials/modules/_example.scss
+++ b/app/assets/stylesheets/styleguide/partials/modules/_example.scss
@@ -12,6 +12,5 @@
   border-radius: 4px;
 }
   .sg-example-inner {
-    @include to-rem(margin-left margin-right, $spacing-half);
-    @include to-rem(margin-bottom, $spacing-base);
+    @include to-rem(padding, $spacing-half);
   }
