--- a/app/views/styleguide/abstractions/_toggle_content.html.erb
+++ b/app/views/styleguide/abstractions/_toggle_content.html.erb
@@ -1,5 +1,5 @@
 <%= styleguide_block 'Toggle Content' do |style| %>
-  <div class="toggle-content js-toggle-content $modifier_class">
+  <div class="toggle-content $modifier_class js-toggle-content">
     <p>Content that gets toggled</p>
   </div>
 
