--- a/app/views/styleguide/buttons/_base.html.erb
+++ b/app/views/styleguide/buttons/_base.html.erb
@@ -12,7 +12,7 @@
   <%# //btn--pointer %>
 
   <%# btn--pointer-alt %>
-  <% example '.btn--pointer-alt' do %>
+  <% example '.btn--pointer.btn--pointer-alt' do %>
     <button type="button" class="btn btn--main btn--pointer $modifier_class"><span class="icon icon--arrow-left-big btn--pointer__icon btn--pointer__icon--flush" aria-hidden="true"></span>Button (button)</button>
 
     <a href="#" class="btn btn--main btn--pointer $modifier_class"><span class="icon icon--arrow-left-big btn--pointer__icon btn--pointer__icon--flush" aria-hidden="true"></span>Button (anchor)</a>
