Update class name for style guide example

--- a/app/assets/stylesheets/styleguide/partials/modules/_example.scss
+++ b/app/assets/stylesheets/styleguide/partials/modules/_example.scss
@@ -11,6 +11,6 @@
   border: 1px solid $color-grey-light-1;
   border-radius: 4px;
 }
-  .sg-example-inner {
+  .sg-example__inner {
     @include to-rem(padding, $spacing-half);
   }
