--- a/app/views/styleguide/_styleguide_block_static.html.erb
+++ b/app/views/styleguide/_styleguide_block_static.html.erb
@@ -8,7 +8,7 @@
   <% end %>
 
   <div class="sg-example">
-    <div class="sg-example-inner">
+    <div class="sg-example__inner">
       <%= example_html.html_safe %>
     </div>
 
