Added modules: centre location, deal main, drop down menu

--- a/app/assets/stylesheets/partials/modules/_deal-main.scss
+++ b/app/assets/stylesheets/partials/modules/_deal-main.scss
@@ -3,14 +3,9 @@
    ====================================================================================== */
 
 /*
-	Usage:
-		Main deal details.
+	Main deal details. Deal details can be shown via two different modules: 'Tile' and 'Deal Main'. 'Deal Main' is used in the 'Deal Detail View' but may appear elsewhere.
 
-	Note:
-		Deal details can be shown via two different modules: 'Tile' and 'Deal Main', 'Deal Main' is used in the 'Deal Detail View' but may appear elsewhere.
-
-	Demo:
-		Style Guide -> Modules -> Deal main
+	Styleguide Deal Main
 */
 
 .deal-main {
