--- a/app/assets/stylesheets/partials/modules/_drop-down-menu.scss
+++ b/app/assets/stylesheets/partials/modules/_drop-down-menu.scss
@@ -3,16 +3,16 @@
    ====================================================================================== */
 
 /*
-  Usage:
-    Common styles for a drop down menu.
+  Common styles for a drop down menu.
 
+  Styleguide Drop Down Menu
+*/
+
+/*
   Note:
     -  Uses the 'Angular toggle visibility' plugin.
     -  Requires the 'Drop down' abstraction.
     -  A lot of these styles flow into the 'Filters' module.
-
-  Demo:
-    Style Guide -> Modules -> Drop Down Menu
 */
 
 .drop-down-menu {
