--- a/app/assets/stylesheets/partials/modules/_centre-location.scss
+++ b/app/assets/stylesheets/partials/modules/_centre-location.scss
@@ -3,11 +3,9 @@
    ====================================================================================== */
 
 /*
-  Usage:
-    Contains the Google static map of the centre and the centre address
+  Contains the Google static map of the centre and the centre address
 
-  Demo:
-    Style Guide -> Modules -> Centre Location
+  Styleguide Centre Location
 */
 
 .centre-location {
