removes jasmine in favour of karma

--- a/app/assets/javascripts/map/deferred_map.js.coffee.erb
+++ b/app/assets/javascripts/map/deferred_map.js.coffee.erb
@@ -18,9 +18,9 @@
     return @initializeMap() if Micello.loadTriggered
     Micello.loadTriggered = true
     if @micelloSupported()
-      $script(['//anzmaps.micello.com/webmap/v0/micellomap.js', '<%= asset_url 'map/micello.js' %>'], @initializeMap)
+      $script(['//anzmaps.micello.com/webmap/v0/micellomap.js', '<%= asset_url "map/micello.js" %>'], @initializeMap)
     else
-      $script('<%= asset_url 'map/micello_ie.js' %>', @initializeMap)
+      $script('<%= asset_url "map/micello_ie.js" %>', @initializeMap)
     @
 
   initializeMap: =>
