--- a/app/assets/javascripts/map/micello/map_theme.js.coffee.erb
+++ b/app/assets/javascripts/map/micello/map_theme.js.coffee.erb
@@ -5,34 +5,34 @@ map.micello = customTheme:
     do ->
       if Modernizr.svg
         offset: ox: 15, oy: 15
-        'ATM': '<%= asset_path('micello-map-icons/atm.svg') %>'
-        'Bathroom': '<%= image_path 'micello-map-icons/restroom.svg' %>'
-        'Bathroom M': '<%= image_path 'micello-map-icons/restroom.svg' %>'
-        'Bathroom W': '<%= image_path 'micello-map-icons/restroom.svg' %>'
-        'Bus': '<%= image_path 'micello-map-icons/bus.svg' %>'
-        'Disabled Access': '<%= image_path 'micello-map-icons/accessible.svg' %>'
-        'Elevator': '<%= image_path 'micello-map-icons/lifts.svg' %>'
-        'Entrance': '<%= image_path 'micello-map-icons/entrance_exit.svg' %>'
-        'Escalator': '<%= image_path 'micello-map-icons/escalator.svg' %>'
-        'Information': '<%= image_path 'micello-map-icons/concierge_desk.svg' %>'
-        'Stairs': '<%= image_path 'micello-map-icons/stairs.svg' %>'
-        'Taxi': '<%= image_path 'micello-map-icons/taxi.svg' %>'
-        'Telephone': '<%= image_path 'micello-map-icons/telephones.svg' %>'
+        'ATM': '<%= asset_path "micello-map-icons/atm.svg" %>'
+        'Bathroom': '<%= image_path "micello-map-icons/restroom.svg" %>'
+        'Bathroom M': '<%= image_path "micello-map-icons/restroom.svg" %>'
+        'Bathroom W': '<%= image_path "micello-map-icons/restroom.svg" %>'
+        'Bus': '<%= image_path "micello-map-icons/bus.svg" %>'
+        'Disabled Access': '<%= image_path "micello-map-icons/accessible.svg" %>'
+        'Elevator': '<%= image_path "micello-map-icons/lifts.svg" %>'
+        'Entrance': '<%= image_path "micello-map-icons/entrance_exit.svg" %>'
+        'Escalator': '<%= image_path "micello-map-icons/escalator.svg" %>'
+        'Information': '<%= image_path "micello-map-icons/concierge_desk.svg" %>'
+        'Stairs': '<%= image_path "micello-map-icons/stairs.svg" %>'
+        'Taxi': '<%= image_path "micello-map-icons/taxi.svg" %>'
+        'Telephone': '<%= image_path "micello-map-icons/telephones.svg" %>'
       else
         offset: ox: 15, oy: 15
-        'ATM': '<%= asset_path('micello-map-icons/png/atm.png') %>'
-        'Bathroom': '<%= image_path 'micello-map-icons/png/restroom.png' %>'
-        'Bathroom M': '<%= image_path 'micello-map-icons/png/restroom.png' %>'
-        'Bathroom W': '<%= image_path 'micello-map-icons/png/restroom.png' %>'
-        'Bus': '<%= image_path 'micello-map-icons/png/bus.png' %>'
-        'Disabled Access': '<%= image_path 'micello-map-icons/png/accessible.png' %>'
-        'Elevator': '<%= image_path 'micello-map-icons/png/lifts.png' %>'
-        'Entrance': '<%= image_path 'micello-map-icons/png/entrance_exit.png' %>'
-        'Escalator': '<%= image_path 'micello-map-icons/png/escalator.png' %>'
-        'Information': '<%= image_path 'micello-map-icons/png/concierge_desk.png' %>'
-        'Stairs': '<%= image_path 'micello-map-icons/png/stairs.png' %>'
-        'Taxi': '<%= image_path 'micello-map-icons/png/taxi.png' %>'
-        'Telephone': '<%= image_path 'micello-map-icons/png/telephones.png' %>'
+        'ATM': '<%= asset_path "micello-map-icons/png/atm.png" %>'
+        'Bathroom': '<%= image_path "micello-map-icons/png/restroom.png" %>'
+        'Bathroom M': '<%= image_path "micello-map-icons/png/restroom.png" %>'
+        'Bathroom W': '<%= image_path "micello-map-icons/png/restroom.png" %>'
+        'Bus': '<%= image_path "micello-map-icons/png/bus.png" %>'
+        'Disabled Access': '<%= image_path "micello-map-icons/png/accessible.png" %>'
+        'Elevator': '<%= image_path "micello-map-icons/png/lifts.png" %>'
+        'Entrance': '<%= image_path "micello-map-icons/png/entrance_exit.png" %>'
+        'Escalator': '<%= image_path "micello-map-icons/png/escalator.png" %>'
+        'Information': '<%= image_path "micello-map-icons/png/concierge_desk.png" %>'
+        'Stairs': '<%= image_path "micello-map-icons/png/stairs.png" %>'
+        'Taxi': '<%= image_path "micello-map-icons/png/taxi.png" %>'
+        'Telephone': '<%= image_path "micello-map-icons/png/telephones.png" %>'
 
   themeFamily: 'Standard'
 
