Added modules: fine print, feedback, hero, list-divider and nav-contextual

--- a/app/assets/stylesheets/partials/modules/_fine-print.scss
+++ b/app/assets/stylesheets/partials/modules/_fine-print.scss
@@ -3,11 +3,11 @@
    ====================================================================================== */
 
 /*
-  Usage:
-    For fine print text such as terms and conditions.
+  For fine print text such as terms and conditions.
 
-  Demo:
-    Style Guide -> Modules -> Fine Print
+  .fine-print--center   - Centre aligns the text
+
+  Styleguide Fine Print
 */
 
 .fine-print {
