--- a/app/assets/stylesheets/partials/modules/_hero.scss
+++ b/app/assets/stylesheets/partials/modules/_hero.scss
@@ -3,11 +3,9 @@
    ====================================================================================== */
 
 /*
-  Usage:
-    This is used to create a full width hero image with text on top, typically used for sub pages.
+  This is used to create a full width hero image with text on top, typically used for sub pages.
 
-  Demo:
-    Style Guide -> Modules -> Hero
+  Styleguide Hero
 */
 
 .hero {
