--- a/app/assets/stylesheets/partials/modules/_list-divider.scss
+++ b/app/assets/stylesheets/partials/modules/_list-divider.scss
@@ -3,14 +3,16 @@
    ====================================================================================== */
 
 /*
-	Usage:
-		List of content with a divider in-between
+  List of content with a divider in-between
 
+  .list-divider--first    - Turn off top padding for the first item
+
+  Styleguide List Divider
+*/
+
+/*
 	Note:
 		For most cases this module will be a list but they're cases when there can be a single item hence no styling is set on the list HTML (`ul/li`).
-
-	Demo:
-		Style Guide -> Modules -> List Divider
 */
 
 .list-divider {
