WSF-6244: Fix gift card accepted link

--- a/app/views/centre_service_details/show.html.erb
+++ b/app/views/centre_service_details/show.html.erb
@@ -77,7 +77,7 @@
             <a href="http://www.westfieldgiftcards.com.au/" rel="external" target="_target" class="btn btn--full btn--main btn--main-blue">Buy Now</a>
           </div>
           <div class="grid__item one-whole non-palm-three-fifths">
-            or <%= link_to "Redeem at these stores", "#{centre_stores_path}?gift_cards=true" %>
+            or <%= link_to "Redeem at these stores", centre_stores_path(gift_cards: true) %>
           </div>
         </div>
 
