--- a/app/assets/stylesheets/partials/abstractions/_overlay.scss
+++ b/app/assets/stylesheets/partials/abstractions/_overlay.scss
@@ -15,3 +15,7 @@
   z-index: $z-index-high+3;
   background-color: rgba($color-grey-light-3, 0.85);
 }
+
+.overlay--absolute {position: absolute;}
+
+.overlay--light {background-color: rgba($color-grey-light-3, 0.5);}
