--- a/app/views/centres/index.html.erb
+++ b/app/views/centres/index.html.erb
@@ -101,23 +101,24 @@
 
       </div>
 
-      <%# Tab content %>
-      <% %w(NSW ACT QLD VIC SA WA).each do |state| %>
-        <ul id="tab-<%= state.downcase %>" class="tab__content<%= ' is-active' if state == 'NSW' %>">
-          <% @centres_by_state[state].each do |centre| %>
-            <li class="js-viewport-check js-centrecode-<%= centre.code %>" >
-              <a class="national__centre-tile national__centre-tile--<%= centre.code %> " href="<%= centre_path( centre ) %>">
-                <div class="container">
-                  <div class="h1"><%= centre.short_name %></div>
-                  <span class="icon icon--arrow-right icon--lrg" aria-hidden="true"></span>
-                </div>
-              </a>
-            </li>
-          <% end %>
-        </ul>
-      <% end %>
-      <%# //Tab content %>
-
+      <div class="container--position js-centre-container">
+        <%# Tab content %>
+        <% %w(NSW ACT QLD VIC SA WA).each do |state| %>
+          <ul id="tab-<%= state.downcase %>" class="tab__content<%= ' is-active' if state == 'NSW' %>">
+            <% @centres_by_state[state].each do |centre| %>
+              <li class="js-viewport-check js-centrecode-<%= centre.code %>" >
+                <a class="national__centre-tile national__centre-tile--<%= centre.code %> " href="<%= centre_path( centre ) %>">
+                  <div class="container">
+                    <div class="h1"><%= centre.short_name %></div>
+                    <span class="icon icon--arrow-right icon--lrg" aria-hidden="true"></span>
+                  </div>
+                </a>
+              </li>
+            <% end %>
+          </ul>
+        <% end %>
+        <%# //Tab content %>
+      </div>
     </nav>
 
   </main>
