Fix up modules after PR feedback

--- a/app/assets/stylesheets/partials/modules/_feedback.scss
+++ b/app/assets/stylesheets/partials/modules/_feedback.scss
@@ -8,7 +8,7 @@
   .feedback--error    - Error feedback
   .feedback--warning  - Warning feedback
   .feedback--success  - Success feedback
-  .feedback--info     - General info
+  .feedback--info     - General feedback
   .feedback--block    - For when you need more than one paragraph of text
 
   Styleguide Feedback
