--- a/app/assets/stylesheets/partials/modules/_list-divider.scss
+++ b/app/assets/stylesheets/partials/modules/_list-divider.scss
@@ -11,8 +11,7 @@
 */
 
 /*
-	Note:
-		For most cases this module will be a list but they're cases when there can be a single item hence no styling is set on the list HTML (`ul/li`).
+	Note: For most cases this module will be a list but they're cases when there can be a single item hence no styling is set on the list HTML (`ul/li`).
 */
 
 .list-divider {
