--- a/app/views/styleguide/modules/_feedback.html.erb
+++ b/app/views/styleguide/modules/_feedback.html.erb
@@ -5,6 +5,7 @@
 <div class="feedback feedback--block feedback--success">
   <h2 class="h3 hn">A heading about your message</h2>
   <p>Feedback message with more than one paragraph of text.</p>
+  <p>Here's another paragraph of text.</p>
   <ul class="list">
     <li>You can have a list too.</li>
     <li>Praesent dapibus</li>
