--- a/app/views/styleguide/modules/_hero.html.erb
+++ b/app/views/styleguide/modules/_hero.html.erb
@@ -17,7 +17,7 @@
 <div class="hero">
   <div class="vert-align">
     <div class="vert-align__inner">
-      <div class="hero__inner container container--narrow">
+      <div class="hero__inner container">
         <span class="hero__icon icon icon--info" aria-hidden="true"></span>
         <h1>Centre Information</h1>
       </div>
