--- a/app/assets/stylesheets/partials/modules/_nav-contextual.scss
+++ b/app/assets/stylesheets/partials/modules/_nav-contextual.scss
@@ -11,8 +11,7 @@
 */
 
 /*
-  Notes:
-    To apply the horizontal scroll functionality append the relevant JS hooks, see the JS file: 'javascripts/jquery-extensions/jquery.nav-contextual.coffee'.
+  Note: To apply the horizontal scroll functionality append the relevant JS hooks, see the JS file: 'jquery.nav-contextual.coffee'.
 */
 
 .nav-contextual {
