--- a/app/views/styleguide/modules/_list_divider.html.erb
+++ b/app/views/styleguide/modules/_list_divider.html.erb
@@ -1,5 +1,10 @@
 <%= styleguide_block 'List Divider' do |style| %>
-<div class="list-divider $modifier_class">
-  <p>Lorem ipsum</p>
-</div>
+<ul>
+  <li class="list-divider $modifier_class">
+    <p>Lorem ipsum</p>
+  </li>
+  <li class="list-divider">
+    <p>Lorem ipsum</p>
+  </li>
+</ul>
 <% end %>
