Style guide modules: fallback msg, pager, pill, pin board

--- a/app/assets/stylesheets/partials/modules/_no-content-fallback-msg.scss
+++ b/app/assets/stylesheets/partials/modules/_no-content-fallback-msg.scss
@@ -3,11 +3,11 @@
    ====================================================================================== */
 
 /*
-  Usage:
-    Fallback message when there is no content or search results.
+  Fallback message when there is no content or search results.
 
-  Demo:
-    Style Guide -> Modules -> No Content Fallback Message
+  .no-content-fallback-msg--flush       - Remove top padding
+
+  Styleguide No Content Fallback Message
 */
 
 .no-content-fallback-msg {
