--- a/app/assets/stylesheets/partials/modules/_pager.scss
+++ b/app/assets/stylesheets/partials/modules/_pager.scss
@@ -3,11 +3,11 @@
    ====================================================================================== */
 
 /*
-	Usage:
-		For paging between sets of pages via 'Prev' and 'Next' links, also includes a page count.
+	For paging between sets of pages via 'Prev' and 'Next' links, also includes a page count.
 
-	Demo:
-    Style Guide -> Modules -> Pager
+  .pager--pin-board       - Pin board version
+
+	Styleguide Pager
 */
 
 .pager {
