--- a/app/assets/stylesheets/partials/modules/_pill.scss
+++ b/app/assets/stylesheets/partials/modules/_pill.scss
@@ -3,11 +3,11 @@
    ====================================================================================== */
 
 /*
-  Usage:
-    Create a pill like button but not limited to buttons.
+  Create a pill like button but not limited to buttons.
 
-  Demo:
-    Style Guide -> Modules -> Pill
+  .pill--spacing        - Apply spacing both sides
+
+  Styleguide Pill
 */
 
 .pill {
