--- a/app/assets/stylesheets/partials/modules/_pin-board.scss
+++ b/app/assets/stylesheets/partials/modules/_pin-board.scss
@@ -3,14 +3,14 @@
    ====================================================================================== */
 
 /*
-  Usage:
-    Pin board container that holds all tiles.
+  Pin board container that holds all tiles.
 
+  Styleguide Pin Board
+*/
+
+/*
   Notes:
     The pin board's layout (no of columns) is controlled via JS except at palm size where it's always 2 columns.
-
-  Demo:
-    Style Guide -> Modules -> Pin Board
 */
 
 .pin-board {
